apps/shared/home-assistant/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-ingress
  namespace: homeassistant
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/middleware: "homeassistant-forward-auth@kubernetescrd"
spec:
  rules:
  - host: homeassistant.${DOMAIN_BASE}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homeassistant-service
            port:
              number: 8123
